# hot-lib-reloader-rs

./: .envrc  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  flake.nix  justfile  rust-toolchain-nightly.toml  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
crates/hot-lib-reloader/: Cargo.toml
crates/hot-lib-reloader-macro/: Cargo.toml
crates/hot-lib-reloader-macro/examples/: macro-test.rs  syn-test.rs
crates/hot-lib-reloader-macro/src/: bevy_system_functions.rs  generate_libreloader_struct.rs  lib.rs  parse_definition.rs  types.rs
crates/hot-lib-reloader/examples/: macro-test.rs
crates/hot-lib-reloader/src/: lib.rs
examples/all-options/: Cargo.toml  README.md  runcc.yml
examples/all-options/lib/: Cargo.toml
examples/all-options/lib/src/: lib.rs
examples/all-options/src/: main.rs
examples/bevy/: .gitignore  Cargo.toml  README.md  justfile  runcc-windows.yml  runcc.yml
examples/bevy/.cargo/: config.toml
examples/bevy/components/: Cargo.toml
examples/bevy/components/src/: lib.rs
examples/bevy/src/: main.rs
examples/bevy/systems/: Cargo.toml
examples/bevy/systems/src/: lib.rs  utilities.rs
examples/hot-egui/: Cargo.toml  README.md  justfile  runcc.yml
examples/hot-egui/lib/: Cargo.toml
examples/hot-egui/lib/src/: lib.rs
examples/hot-egui/src/: main.rs
examples/hot-iced/: Cargo.toml  README.md  justfile  runcc.yml
examples/hot-iced/lib/: Cargo.toml
examples/hot-iced/lib/src/: lib.rs
examples/hot-iced/src/: main.rs
examples/input-files/: lib.rs
examples/lib-reload-subscription/: README.md
examples/lib-reload-subscription/lib/src/: lib.rs
examples/lib-reload-subscription/src/: main.rs
examples/minimal/: Cargo.toml  README.md  runcc.yml
examples/minimal/lib/: Cargo.toml
examples/minimal/lib/src/: lib.rs
examples/minimal/src/: main.rs
examples/minimal/tests/: hot_reload_test.rs
examples/nannou-vector-field/: .envrc  .gitignore  Cargo.toml  README.md  justfile  runcc.yml
examples/nannou-vector-field/lib/: Cargo.toml
examples/nannou-vector-field/lib/src/: lib.rs  vector_field.rs
examples/nannou-vector-field/nannou_dynamic/: Cargo.toml
examples/nannou-vector-field/nannou_dynamic/src/: lib.rs
examples/nannou-vector-field/src/: main.rs
examples/reload-events/: Cargo.toml  README.md
examples/reload-events/lib/: Cargo.toml
examples/reload-events/lib/src/: lib.rs
examples/reload-events/src/: main.rs
examples/reload-feature/: Cargo.toml  README.md  runcc.yml
examples/reload-feature/lib/: Cargo.toml
examples/reload-feature/lib/src/: lib.rs
examples/reload-feature/src/: main.rs
examples/serialized-state/: Cargo.toml  README.md  justfile
examples/serialized-state/lib/: Cargo.toml
examples/serialized-state/lib/src/: lib.rs
examples/serialized-state/src/: main.rs
hot-lib-reloader-macro/: Cargo.toml
hot-lib-reloader-macro/examples/: syn-test.rs
hot-lib-reloader-macro/src/: generate_libreloader_struct.rs  lib.rs  util.rs
hot-lib-reloader-macro/src/hot_module/: code_gen.rs  mod.rs  module_body.rs  parse.rs  types.rs
hot-lib-reloader-macro/src/lib_reloader/: parse_definition.rs
macro/: Cargo.toml  README.md
macro-no-mangle-if-debug/: Cargo.toml  README.md
macro-no-mangle-if-debug/examples/: no-mangle-if-debug-example.rs
macro-no-mangle-if-debug/src/: lib.rs
macro/examples/: syn-test.rs
macro/src/: lib.rs  util.rs
macro/src/hot_module/: attribute.rs  code_gen.rs  module_body.rs
macro/src/lib_reloader/: bevy_system_functions.rs  generate_libreloader_struct.rs  mod.rs  parse_definition.rs  types.rs
scripts/: run-all-examples.sh  rust-crates.py
src/: codesign.rs  error.rs  lib.rs  lib_reload_events.rs  lib_reloader.rs  log.rs  macros.rs  util.rs
tests/: common.rs  lib-loader-test.rs  recursive.rs
tests/lib_for_testing/: Cargo.toml
tests/lib_for_testing/src/: lib.rs
tests/recursive_lib/: Cargo.toml
tests/recursive_lib/src/: lib.rs
