[package]
name = "hot-lib-reloader"
version = "0.4.3"
categories = ["development-tools"]
edition = "2021"
exclude = [".dir-locals.el", "DEV.org", "doc/*"]
homepage = "https://github.com/rksm/hot-lib-reloader-rs"
keywords = ["hot-reloading", "hot-reload", "autoreload", "live-programming"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rksm/hot-lib-reloader-rs"
description = "Utility to reload libraries on change. For faster feedback cycles."

[dependencies]
hot-lib-reloader-macro = { version = "0.4.3", path = "./hot-lib-reloader-macro" }
libloading = { version = "^0.7" }
log = "0.4.17"
notify = { version = "^4" }

[dev-dependencies]
env_logger = "^0.9"

[workspace]
resolver = "2"
members = ["hot-lib-reloader-macro"]
