[package]
name = "hot-lib-reloader-macro"
version = "0.5.0"
edition = "2021"
homepage = "https://github.com/rksm/hot-lib-reloader-rs"
license = "MIT"
readme = "README.md"
repository = "https://github.com/rksm/hot-lib-reloader-rs"
description = "Macro crate for hot-lib-reloader"


[lib]
proc-macro = true

[dependencies]
heck = "0.4"
proc-macro2 = "1.0.42"
quote = "1.0"
# syn = { version = "1.0", features = ["full", "extra-traits"] }
syn = { version = "1.0", features = ["full"] }
