[package]
name = "no-mangle-if-debug"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/rksm/hot-lib-reloader-rs"
license = "MIT"
readme = "README.md"
repository = "https://github.com/rksm/hot-lib-reloader-rs"
description = "Attribute macro that does #[no_mangle] only in debug mode."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "^1"
quote = "^1"
syn = { version = "^1", features = ["full"] }
