[workspace]
resolver = "2"
members = ["systems", "components"]

[package]
name = "bin"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.12.1" }
bevy_dylib = "0.12.1"
components = { path = "components" }
hot-lib-reloader = { path = "../..", optional = true }
rand = "0.8.5"
systems = { path = "systems" }

[features]
default = []
reload = [
  "dep:hot-lib-reloader",
  # Make sure that the types don't change:
  "components/dynamic",
  # This is important on windows for avoiding file locking issues:
  "bevy/dynamic_linking",
]
