[workspace]
resolver = "2"
members = ["lib"]

[package]
name = "hot-egui"
version = "0.1.0"
authors = ["Robert Krahn <robert.krahn@gmail.com>"]
edition = "2021"

[dependencies]
eframe = "0.19.0"
#hot-lib-reloader = { version = "0.7.0", optional = true }
lib = { path = "./lib" }

hot-lib-reloader = { path = "C:\\dev\\hot-lib-reloader-rs", optional = true}

[features]
default = []
reload = ["dep:hot-lib-reloader"]
