[workspace]
resolver = "2"
members = ["lib", "nannou_dynamic"]

[package]
name = "nannou-vector-field"
authors = ["Robert Krahn <robert.krahn@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
hot-lib-reloader = { path = "../..", optional = true }
lib = { path = "./lib" }
nannou = { package = "nannou_dynamic", path = "./nannou_dynamic" }

[features]
default = ["reload"]
reload = ["dep:hot-lib-reloader"]


[profile.dev]
opt-level = 1

[profile.dev.package.nannou]
opt-level = 3

[profile.dev.package.nannou_dynamic]
opt-level = 3