[package]
name = "systems"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
bevy = { version = "0.12.1" }
bevy_dylib = "0.12.1"
components = { path = "../components" }
log = "*"
rand = "0.8.5"

[features]
default = []
dynamic = ["bevy/dynamic_linking", "components/dynamic"]
